@@ -95,6 +95,11 @@ exact list of Spring-DM project dependencies see the respective Maven2 pom.xml f
 - Dependencies: slf4j, spring-osgi-core
                 [Apache Tomcat, Jetty, Log4J]
 
+* spring-osgi-web-extender-${version}.jar
+- Contents: The Spring Dynamic Modules Web Extender
+- Dependencies: slf4j, spring-osgi-core, spring-osgi-web
+                [Apache Tomcat, Jetty, Log4J]
+
 * extensions / spring-osgi-annotation-${version}.jar
 - Contents: The Spring Dynamic Modules Annotation Extension
 - Dependencies: slf4j, spring-beans, spring-core, spring-osgi-core
